<resources>
    <string name="app_name">Suitmedia</string>
    <string name="button_back">Button Back</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="palindrome">Palindrome</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="retry">Try Again</string>
    <string name="data_is_empty">Data is empty!</string>
    <string name="third_screen">Third Screen</string>
    <string name="fragment_title">Fragment Title</string>
</resources>